--- a/snapcast/PKGBUILD
+++ b/snapcast/PKGBUILD
@@ -4,14 +4,14 @@
 # Contributor: Bart De Vries <bart at mogwai dot be>
 
 pkgname=snapcast
-pkgver=0.32.3
+pkgver=0.34.0
 pkgrel=1
 _pkgname_snapweb=snapweb
-_snapweb_version=0.9.1
+_snapweb_version=0.9.2
 pkgdesc="Synchronous multi-room audio player"
 arch=('x86_64' 'armv7h' 'aarch64')
 url="https://github.com/badaix/snapcast"
-license=('GPL')
+license=('GPL-1.0-or-later')
 depends=(
   alsa-lib
   avahi
@@ -21,12 +21,17 @@ depends=(
   expat
   libsoxr
   libpulse
+  libpipewire
+  openssl
 )
 optdepends=(
-  "jack2: JACK low-latency audio server"
   "python-websocket-client: stream plugin script"
   "python-mpd2: stream plugin script"
   "python-musicbrainzngs: stream plugin script"
+  "python-requests: general plugin support"
+  "python-gobject: mpris and mpd plugin support"
+  "libnotify: mpris plugin support"
+  "python-dbus: mpris plugin support"
 )
 makedepends=(
   cmake
@@ -41,62 +46,62 @@ source=("${pkgname}-${pkgver}.tar.gz::https://github.com/badaix/snapcast/archive
         "snapcast.tmpfiles"
         "snapcast.install")
 noextract=("${_pkgname_snapweb}-${_snapweb_version}.zip")
-sha256sums=('e53a62872d03521c7ce261378792f203d4073d769b362116ab02c98aa7c64008'
-            '5a63936b2ce9ce29eac7760b78a8e3013cb0ec95c5ca140d68261143f826dfb5'
+sha256sums=('a2918ea4d1f9b2df9c4247fd71bd452ea03a5d20ac44f60a736df90488858944'
+            'e4ebeb911d4485daa469a12238d935721d4577612f9b5e43d2febf105f5a4660'
             '9fe6e9e07adb77f555a617b772e6d01e098e1dfaad1e8075e03a7d7ba76141de'
             'e8c3441c4ca646a9b66d61355e90862fd3481562ae3b4e0a4bc1c978464ae2c7'
             '23a0390774279f8c5d02d3307cfb67f2e9360f42704bb4f13d8c43e091fe997f')
 
 prepare() {
-    mkdir -p ${_pkgname_snapweb}-${_snapweb_version}
-    bsdtar -xf ${_pkgname_snapweb}-${_snapweb_version}.zip -C ${_pkgname_snapweb}-${_snapweb_version}
+  mkdir -p ${_pkgname_snapweb}-${_snapweb_version}
+  bsdtar -xf ${_pkgname_snapweb}-${_snapweb_version}.zip -C ${_pkgname_snapweb}-${_snapweb_version}
 }
 
 build() {
-    cd "${pkgname}-${pkgver}"
-    cmake -B build -S . \
-          -DCMAKE_BUILD_TYPE=None \
-          -DCMAKE_INSTALL_PREFIX=/usr \
-          -Wno-dev
-    cmake --build build
+  cd "${pkgname}-${pkgver}"
+  cmake -B build -S . \
+        -DCMAKE_BUILD_TYPE=None \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+         -Wno-dev
+  cmake --build build
 }
 
 package() {
-    cd "${pkgname}-${pkgver}"
+  cd "${pkgname}-${pkgver}"
 
-    install -Dm755 bin/snapserver "${pkgdir}/usr/bin/snapserver"
-    install -Dm644 server/snapserver.1 "${pkgdir}/usr/share/man/man1/snapserver.1"
-    install -Dm644 server/etc/snapserver.conf "${pkgdir}/etc/snapserver.conf"
-    # install snapweb
-    for file in ${srcdir}/${_pkgname_snapweb}-${_snapweb_version}/*\.*;
-        do install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/snapweb/";
-    done
-    for file in ${srcdir}/${_pkgname_snapweb}-${_snapweb_version}/assets/*\.*;
-        do install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/snapweb/assets/";
-    done
-    for file in server/etc/plug-ins/*\.*;
-        do install -Dm 755 ${file} -t "${pkgdir}/usr/share/snapserver/plug-ins/";
-    done
+  install -Dm755 bin/snapserver "${pkgdir}/usr/bin/snapserver"
+  install -Dm644 server/snapserver.1 "${pkgdir}/usr/share/man/man1/snapserver.1"
+  install -Dm644 server/etc/snapserver.conf "${pkgdir}/etc/snapserver.conf"
+  # install snapweb
+  for file in ${srcdir}/${_pkgname_snapweb}-${_snapweb_version}/*\.*; do
+    install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/snapweb/"
+  done
+  for file in ${srcdir}/${_pkgname_snapweb}-${_snapweb_version}/assets/*\.*; do
+    install -Dm 644 ${file} -t "${pkgdir}/usr/share/snapserver/snapweb/assets/"
+  done
+  for file in server/etc/plug-ins/*\.*; do
+    install -Dm 755 ${file} -t "${pkgdir}/usr/share/snapserver/plug-ins/"
+  done
 
-    install -Dm755 bin/snapclient "${pkgdir}/usr/bin/snapclient"
-    install -Dm644 client/snapclient.1 "${pkgdir}/usr/share/man/man1/snapclient.1"
+  install -Dm755 bin/snapclient "${pkgdir}/usr/bin/snapclient"
+  install -Dm644 client/snapclient.1 "${pkgdir}/usr/share/man/man1/snapclient.1"
 
-    install -Dm644 extras/package/debian/snapserver.service "${pkgdir}/usr/lib/systemd/system/snapserver.service"
-    install -Dm644 extras/package/debian/snapserver.default "${pkgdir}/etc/default/snapserver"
-    install -Dm644 extras/package/debian/snapclient.service "${pkgdir}/usr/lib/systemd/system/snapclient.service"
-    install -Dm644 extras/package/debian/snapclient.default "${pkgdir}/etc/default/snapclient"
+  install -Dm644 extras/package/debian/snapserver.service "${pkgdir}/usr/lib/systemd/system/snapserver.service"
+  install -Dm644 extras/package/debian/snapserver.default "${pkgdir}/etc/default/snapserver"
+  install -Dm644 extras/package/debian/snapclient.service "${pkgdir}/usr/lib/systemd/system/snapclient.service"
+  install -Dm644 extras/package/debian/snapclient.default "${pkgdir}/etc/default/snapclient"
 
-    install -Dm644 "${srcdir}/snapcast.sysusers" "${pkgdir}/usr/lib/sysusers.d/snapclient.conf"
-    install -Dm644 "${srcdir}/snapcast.tmpfiles" "${pkgdir}/usr/lib/tmpfiles.d/snapclient.conf"
+  install -Dm644 "${srcdir}/snapcast.sysusers" "${pkgdir}/usr/lib/sysusers.d/snapclient.conf"
+  install -Dm644 "${srcdir}/snapcast.tmpfiles" "${pkgdir}/usr/lib/tmpfiles.d/snapclient.conf"
 
-    # install documentation
-    install -d "${pkgdir}/usr/share/doc/${pkgname}/control"
-    cp -R doc/* "${pkgdir}/usr/share/doc/${pkgname}/"
-    install -Dm644 "changelog.md" "${pkgdir}/usr/share/doc/${pkgname}"
+  # install documentation
+  install -d "${pkgdir}/usr/share/doc/${pkgname}/control"
+  cp -R doc/* "${pkgdir}/usr/share/doc/${pkgname}/"
+  install -Dm644 "changelog.md" "${pkgdir}/usr/share/doc/${pkgname}"
 
-    find "${pkgdir}"/usr/share/doc/${pkgname} -type f -exec chmod 0644 {} \;
-    find "${pkgdir}"/usr/share/doc/${pkgname} -type d -exec chmod 0755 {} \;
+  find "${pkgdir}"/usr/share/doc/${pkgname} -type f -exec chmod 0644 {} \;
+  find "${pkgdir}"/usr/share/doc/${pkgname} -type d -exec chmod 0755 {} \;
 
-    # example control scripts
-    cp -R control/* "${pkgdir}/usr/share/doc/${pkgname}/control/"
+  # example control scripts
+  cp -R control/* "${pkgdir}/usr/share/doc/${pkgname}/control/"
 }
